# RARL

./: .gitignore  pyproject.toml
docs/: agent_training_loop_guideline.md  recording_handoff_log.md  robotrl_30min_orchestrator_protocol.md
robotrl/: cli.py  fetch_envs.py  fetch_training.py
robotrl/assets/: fetch_box_place.xml  fetch_box_place_two.xml
runs/learning_4/: README.md
runs/learning_4/run_001_single_object_random_generalization_seed7/: eval_results.json
tests/: test_fetch_training.py
